// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diff ClassComponent VNode should be in VPath 1`] = `
Array [
  Diff: update-text
    path:
    <Biu $index="0" />
    <div $index="0" />
    <Bar key="0" $index="0" />
    <div className="bar" $index="0" />
    <p $index="0" />
    <$$Text $index="0" />
    ---
    oldValue:
    "test"
    ---
    newValue:
    "biubiu",
]
`;

exports[`Diff FunctionalComponent VNode should be in VPath 1`] = `
Array [
  Diff: update-text
    path:
    <FunctionalBiu $index="0" />
    <div $index="0" />
    <FunctionalBar key="1" $index="1" />
    <div className="bar" $index="0" />
    <p $index="0" />
    <$$Text $index="0" />
    ---
    oldValue:
    "a"
    ---
    newValue:
    "biubiu",
]
`;

exports[`Diff Should compute props diff 1`] = `
Array [
  Diff: add-props
    path:
    <PropDiffComp $index="0" />
    <a $index="0" />
    ---
    newValue:
    Object {
        "target": "_blank",
      },
  Diff: update-props
    path:
    <PropDiffComp $index="0" />
    <a $index="0" />
    ---
    oldValue:
    Object {
        "href": "foo",
      }
    ---
    newValue:
    Object {
        "href": "bar",
      },
  Diff: remove-props
    path:
    <PropDiffComp $index="0" />
    <a $index="0" />
    ---
    oldValue:
    Object {
        "title": "test",
      },
]
`;

exports[`Diff Should compute style diff 1`] = `
Array [
  Diff: add-styles
    path:
    <StyleDiffComp $index="0" />
    <div $index="0" />
    ---
    newValue:
    Object {
        "fontFamily": "monospace",
      },
  Diff: update-styles
    path:
    <StyleDiffComp $index="0" />
    <div $index="0" />
    ---
    oldValue:
    Object {
        "color": "green",
        "top": "1px",
      }
    ---
    newValue:
    Object {
        "color": "red",
        "top": "11px",
      },
  Diff: remove-styles
    path:
    <StyleDiffComp $index="0" />
    <div $index="0" />
    ---
    oldValue:
    Object {
        "position": "absolute",
      },
]
`;

exports[`Diff Should compute text diff 1`] = `
Array [
  Diff: update-text
    path:
    <Bar $index="0" />
    <div className="bar" $index="0" />
    <p $index="0" />
    <$$Text $index="0" />
    ---
    oldValue:
    "foo"
    ---
    newValue:
    "bar",
]
`;

exports[`Diff Should compute tree diff Append tree 1`] = `
Array [
  Diff: insert-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    newValue:
    <li key="c">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "c"
        </p>
    </li>,
]
`;

exports[`Diff Should compute tree diff Delete tree 1`] = `
Array [
  Diff: remove-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    oldValue:
    <li key="b" $index="1">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "b"
        </p>
    </li>,
]
`;

exports[`Diff Should compute tree diff Insert tree 1`] = `
Array [
  Diff: insert-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    newValue:
    <li key="b">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "b"
        </p>
    </li>
    ---
    Before:
    <li key="c" $index="1">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "c"
        </p>
    </li>,
]
`;

exports[`Diff Should compute tree diff Mixed 1`] = `
Array [
  Diff: insert-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    newValue:
    <li key="foo">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "foo"
        </p>
    </li>
    ---
    Before:
    <li key="a" $index="0">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "a"
        </p>
    </li>,
  Diff: insert-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    newValue:
    <li key="d">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "d"
        </p>
    </li>,
  Diff: insert-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    newValue:
    <li key="e">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "e"
        </p>
    </li>,
  Diff: remove-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    oldValue:
    <li key="b" $index="1">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "b"
        </p>
    </li>,
]
`;

exports[`Diff Should compute tree diff Move tree 1`] = `
Array [
  Diff: move-tree
    path:
    <TreeDiffComp $index="0" />
    <ul $index="0" />
    ---
    oldValue:
    <li key="b">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "b"
        </p>
    </li>
    ---
    Before:
    <li key="c" $index="1">
        <p $index="0">
            <strong key="$0" $index="0">
                "Item: "
            </strong>
            "c"
        </p>
    </li>,
]
`;

exports[`Diff Should work multiple times (functional) 1`] = `
Array [
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "γthis",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "tγhis",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thγis",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thiγs",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thisγ",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "γis",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "iγs",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "isγ",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="2" $index="2" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "a"
      ---
      newValue:
      "γa",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="2" $index="2" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "a"
      ---
      newValue:
      "aγ",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "γtest",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "tγest",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "teγst",
  ],
  Array [
    Diff: update-text
      path:
      <FunctionalBiu $index="0" />
      <div $index="0" />
      <FunctionalBar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "tesγt",
  ],
]
`;

exports[`Diff Should work multiple times (mixed) 1`] = `
Array [
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "γthis",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "tγhis",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thγis",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thiγs",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thisγ",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <Bar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "γis",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <Bar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "iγs",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <Bar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "isγ",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="2" />
      ---
      oldValue:
      "a"
      ---
      newValue:
      "γa",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="2" />
      ---
      oldValue:
      "a"
      ---
      newValue:
      "aγ",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="3" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "γtest",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="3" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "tγest",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="3" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "teγst",
  ],
  Array [
    Diff: update-text
      path:
      <MixedBiu $index="0" />
      <div $index="0" />
      <$$Text $index="3" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "tesγt",
  ],
]
`;

exports[`Diff Should work multiple times 1`] = `
Array [
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "γthis",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "tγhis",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thγis",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thiγs",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="0" $index="0" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "this"
      ---
      newValue:
      "thisγ",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "γis",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "iγs",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="1" $index="1" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "is"
      ---
      newValue:
      "isγ",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="2" $index="2" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "a"
      ---
      newValue:
      "γa",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="2" $index="2" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "a"
      ---
      newValue:
      "aγ",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "γtest",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "tγest",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "teγst",
  ],
  Array [
    Diff: update-text
      path:
      <Biu $index="0" />
      <div $index="0" />
      <Bar key="3" $index="3" />
      <div className="bar" $index="0" />
      <p $index="0" />
      <$$Text $index="0" />
      ---
      oldValue:
      "test"
      ---
      newValue:
      "tesγt",
  ],
]
`;
